updated navbar style and button

--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,19 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The Fine Print Website" />
 
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+
+    <!--Font Awesome-->
     <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+      src="https://kit.fontawesome.com/1e29679261.js"
+      crossorigin="anonymous"
     ></script>
-    <script
-      src="https://unpkg.com/react/umd/react.production.min.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-      crossorigin
-    ></script>
-    <script>
-      var Alert = ReactBootstrap.Alert;
-    </script>
 
     <title>The Fine Print</title>
   </head>
