finished navbar and footer

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,16 @@
     />
 
     <!--Font Awesome-->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    /> -->
+    
+    <!--Font Import-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
     />
 
     <title>Sheila Mojtehedi</title>
